tests/ui/errors/snapshots/parse_value_enum_positive_above_u64_max.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Syntax error
   ╭─[test.lis:3:9]
 2 │ enum Bad: int64 {
 3 │   Way = 99999999999999999999999,
   ·         ───────────┬───────────
   ·                    ╰── integer literal '99999999999999999999999' is too large
 4 │ }
   ╰────
  help: Maximum value is `18446744073709551615` · code: [parse.syntax_error]
